# MarkerDetect

./: CMakeLists.txt  DataPack.h  README.md  camthread.cpp  camthread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialthread.cpp
